# muzik

./: .gitignore  Cargo.toml
crates/indexable/: Cargo.toml
crates/indexable/src/: lib.rs
crates/muzui/: Cargo.toml
crates/muzui/geometry/: Cargo.toml
crates/muzui/geometry/src/: lib.rs
crates/muzui/lang/: Cargo.toml
crates/muzui/lang/src/: lexer.rs  mod.rs  parser.rs
crates/muzui/layout/: Cargo.toml
crates/muzui/layout/src/: lib.rs
crates/muzui/macros/: Cargo.toml
crates/muzui/macros/src/: lib.rs
crates/muzui/muzui/: Cargo.toml
crates/muzui/muzui/src/: graphics.rs  lib.rs
crates/muzui/muzui/src/elements/: container.rs  grid.rs  image.rs  masonry.rs  mod.rs  text.rs
crates/muzui/muzui/src/node/: builder.rs  mod.rs
crates/muzui/styling/: Cargo.toml
crates/muzui/styling/src/: colors.rs  font.rs  lib.rs  position.rs  thickness.rs
src/: main.rs
src/mpris/: mod.rs
src/muzui/: layout.rs  mod.rs
src/muzui/elements/: container.rs  image.rs  mod.rs  text.rs
src/muzui/language/: program.rs
src/muzui/node/: builder.rs  mod.rs
src/muzui/style/: colors.rs  font.rs  mod.rs  position.rs  thickness.rs
